kubernetes/production/deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
    secret.reloader.stakater.com/reload: "chaes-backend"
  namespace: production
  name: chaes-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chaes-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: chaes-backend
    spec:
      containers:
        - name: chaes-backend
          image: 012426929987.dkr.ecr.us-west-2.amazonaws.com/chaes-backend:$BITBUCKET_COMMIT
          imagePullPolicy: Always
          ports:
           - containerPort: 3333
             name: appport
             protocol: TCP
          securityContext:
            runAsUser: 1000
            runAsNonRoot: true    
            allowPrivilegeEscalation: false
          resources:
            requests:
              memory: "64Mi"
              cpu: "60m"
            limits:
              memory: "256Mi"
              cpu: "256m"
      nodeSelector:
        alpha.eksctl.io/nodegroup-name: uptech-eks-production-chaes
---
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: chaes-backend
spec:
  ports:
    - port: 80
      targetPort: 3333
      protocol: TCP
  type: ClusterIP
  selector:
    app: chaes-backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
  namespace: production
  name: chaes-backend
spec:
  rules:
  - host: backend.chaes.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chaes-backend
            port:
              number: 80    
#---
#apiVersion: kubernetes-client.io/v1
#kind: ExternalSecret
#metadata:
#  name: chaes-backend
#  namespace: produtcion
#spec:
#  backendType: secretsManager
#  dataFrom:
#    - chaes/chaes-backend
